# Verilinter

./: .gitignore  README.md  RULES.md  debug_print.py  pyproject.toml
src/: run_lint.py
src/pkg/: sv_adapter.py
tests/: print_context.py  print_rule_results.py  print_tree_test.py  run_walker.py  test_context.py  test_multi_file_lint.py  test_registration_files.py  test_rule_base.py  test_rule_registration.py  test_rule_runner.py  test_rules.py  test_run_lint.py  test_sv_adapter.py  test_symbol_table.py
tests/ast/: __init__.py  print_context.py  print_tree_test.py  run_walker.py  test_context.py  test_symbol_table.py  test_walker.py
tests/data/: always_latch.v  case_generate.v  default_nettype_none.v  defparam_usage.v  dup_module_b.v  final_block.v  full_parallel_case.v  initial_block.v  internal_inout.v  latch_in_always_comb.v  multiple_drivers.v  new_syntax_rules.v  simple.v  undefined_module_ref.v  undriven_signal.v  unique_priority_case.v
tests/expected/: comparison.html  simple.v.snippets.txt  simple.v.walk.txt
tests/handlers/: print_identifier_handler.py  test_base_handler.py  test_case_generate_handler.py  test_hierarchy_instantiation_handler.py  test_identifier.py  test_identifier_handler_integration.py
tests/rules/: __init__.py  print_rule_results.py  test_duplicate_module_definition.py  test_redeclared_variable.py  test_rule_base.py  test_rule_runner.py  test_rules.py  test_undeclared_variable.py  test_undefined_module.py  test_unused_variable_rule.py
tests/semantic/: __init__.py  test_symbol_table.py
tests/vnodes/: __init__.py  (+2 more)
(+100 files in other folders)
