[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verilinter"
version = "0.1.0"
description = "A static analysis and linting framework for SystemVerilog built on pyslang."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyslang",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
verilinter = "run_lint:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
